ToDoの追加処理実装

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="fragment_todo_title">ToDo</string>
+    <string name="add_todo_hint">タスクを入力しましょう</string>
 
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
