--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,11 @@
 <resources>
     <string name="app_name">SimpleToDoApp</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="nav_header_desc">簡易的なToDoアプリ</string>
 
     <string name="fragment_todo_title">ToDo</string>
-    <string name="add_todo_hint">タスクを入力しましょう</string>
+    <string name="fragment_settings_title">設定</string>
+    <string name="add_todo_hint">タスクを入力</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
-    <string name="menu_tools">Tools</string>
-    <string name="menu_share">Share</string>
-    <string name="menu_send">Send</string>
+    <string name="menu_settings">設定</string>
+
 </resources>
